commented out hint section in view for presentation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+
+body{
+	text-align: center;
+}
+
+#hint {
+	display: none;
+}
+
+#hint:target {
+	display: block;
+}
