--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+	<a href="/games/gifs"><img src="https://s3.amazonaws.com/uploads.hipchat.com/39979/685777/hgbMdVG61W4qoPM/gif_of_music_logo_draft.png"></a><br />
+
 <%= yield %>
 
 </body>
